--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vitality</title>
+    <title>Good Candy Inc.</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -621,7 +621,7 @@
         </div>
     </section>
 
-    <a href="#" class="btn btn-block btn-full-width">Buy Vitality Now!</a>
+ <!--   <a href="#" class="btn btn-block btn-full-width">Buy Vitality Now!</a> -->
 
     <footer class="footer" style="background-image: url('assets/img/bg-footer.jpg')">
         <div class="container text-center">
@@ -815,8 +815,8 @@
     </div>
 
     <!-- Style Switcher - FOR DEMO PURPOSES ONLY -->
-    <div id="style-switcher" class="close-style-switcher">
-        <!-- Colors -->
+ <!--   <div id="style-switcher" class="close-style-switcher">
+ 
         <div class="segment">
             <h4>Theme Colors</h4>
             <a title="vitality-red" class="switcher red-bg"></a>
@@ -848,6 +848,7 @@
         <div class="segment">
             <a href="index.html"><small>Back to Preview Page</small></a>
         </div>
+-->		
     </div>
     <!-- End Style Switcher -->
 
