--- a/index.html
+++ b/index.html
@@ -136,21 +136,21 @@
             <div class="row text-center content-row">
                 <div class="col-md-3 col-sm-6">
                     <div class="about-content">
-                        <i class="fa fa-eye fa-4x"></i>
+                        <i class="fa fa-code fa-4x"></i>
                         <h3>Website Creation</h3>
                         <p>We concentrate on simple web design that is sure to be mobile friendly and make your product look great!</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="about-content">
-                        <i class="fa fa-edit fa-4x"></i>
+                        <i class="fa fa-bullhorn fa-4x"></i>
                         <h3>Social Media Consulting</h3>
                         <p>Establishing your business on Social Networks has been proven to improve customer retention rate as well as the customers experience with your product or service. </p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="about-content">
-                        <i class="fa fa-tablet fa-4x"></i>
+                        <i class="fa fa-cutlery fa-4x"></i>
                         <h3>Local Listing Management</h3>
                         <p>Managing all of your local listings can be cumbersome and time consuming.  Let us keep these up to date while you concentrate on providing your customer with a great experience. </p>
                     </div>
