--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
             <div class="row content-row">
                 <div class="col-lg-12">
                     <div class="about-carousel">
+
                         <div class="item">
                             <img src="assets/img/people/1.jpg" class="img-responsive" alt="">
                             <div class="caption">
@@ -214,74 +215,8 @@
                                         <a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
                                     </li>
                                 </ul>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="assets/img/people/3.jpg" class="img-responsive" alt="">
-                            <div class="caption">
-                                <h3>Kate Williams</h3>
-                                <hr class="colored">
-                                <p>Creative Director</p>
-                                <ul class="list-inline social">
-                                    <li>
-                                        <a href="#"><i class="fa fa-facebook fa-fw"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-twitter fa-fw"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-dribbble fa-fw"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="assets/img/people/4.jpg" class="img-responsive" alt="">
-                            <div class="caption">
-                                <h3>Amy Vanderbute</h3>
-                                <hr class="colored">
-                                <p>Graphic Artist</p>
-                                <ul class="list-inline social">
-                                    <li>
-                                        <a href="#"><i class="fa fa-facebook fa-fw"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-twitter fa-fw"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-dribbble fa-fw"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="assets/img/people/5.jpg" class="img-responsive" alt="">
-                            <div class="caption">
-                                <h3>Jeremy Davidson</h3>
-                                <hr class="colored">
-                                <p>Web Developer</p>
-                                <ul class="list-inline social">
-                                    <li>
-                                        <a href="#"><i class="fa fa-facebook fa-fw"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-twitter fa-fw"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-github fa-fw"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
+
+						</div>
                     </div>
                 </div>
             </div>
@@ -506,7 +441,7 @@
         </div>
     </section>
 
-    <section id="pricing" class="pricing" style="background-image: url('assets/img/bg-pricing.jpg')">
+ <!--   <section id="pricing" class="pricing" style="background-image: url('assets/img/bg-pricing.jpg')">
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-12">
@@ -567,7 +502,7 @@
             </div>
         </div>
     </section>
-
+-->
     <section id="contact">
         <div class="container">
             <div class="row">
