--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+	
+	<style>.owl-wrapper{margin-left:auto; margin-right:auto;}</style>
 
 </head>
 
@@ -117,7 +119,7 @@
             <img src="assets/img/profile.png" class="img-responsive img-centered" alt="">
             <div class="brand-name">Good Candy Inc.</div>
             <hr class="colored">
-            <div class="brand-name-subtext">Sweet. Simple Solutions</div>
+            <div class="brand-name-subtext">Sweet. Simple. Solutions.</div>
         </div>
         <div class="scroll-down">
             <a class="btn" href="#about"><i class="fa fa-angle-down fa-fw"></i></a>
