--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Us</h2>
+                    <h2>Contact Us</h2>vis
                     <hr class="colored">
                     <p>Please tell us about your next project and we will let you know what we can do to help you.</p>
                 </div>
@@ -564,15 +564,15 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-4 contact-details">
-                    <h4><i class="fa fa-phone"></i> Call</h4>
+                    <h3><i class="fa fa-phone"></i> Call</h3>
                     <p>555-213-4567</p>
                 </div>
                 <div class="col-md-4 contact-details">
-                    <h4><i class="fa fa-map-marker"></i> Visit</h4>
+                    <h3><i class="fa fa-map-marker"></i> Visit</h3>
                     <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
                 </div>
                 <div class="col-md-4 contact-details">
-                    <h4><i class="fa fa-envelope"></i> Email</h4>
+                    <h3><i class="fa fa-envelope"></i> Email</h3>
                     <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
                     </p>
                 </div>
