--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 	
-	<style>.owl-wrapper{margin-left:auto; margin-right:auto;}</style>
+	<style>.owl-wrapper{margin-left:auto; margin-right:auto;}
+			.port1{height:400px; margin-left:}
+			.port2{right:20%;}
+	
+	</style>
 
 </head>
 
@@ -314,14 +318,14 @@
                     <div class="col-md-4 col-md-push-8">
                         <div class="project-details">
                             <img src="assets/img/client-logos/logo-1.png" class="img-responsive client-logo" alt="">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
+                            <span class="project-name">Vino's Pizza</span>
+                            <span class="project-description">Redesign of pizza shop website in Lafayette Hill, PA</span>
                             <hr class="colored">
                             <a href="#portfolioModal1" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
-                    <div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive portfolio-image" alt="">
+                    <div class="col-md-8 col-md-pull-4 hidden-xs port2">
+                        <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive portfolio-image port1" alt="">
                     </div>
                 </div>
             </div>
