--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	
 	<style>.owl-wrapper{margin-left:auto; margin-right:auto;}
 			.port1{height:400px; margin-left:}
-			.port2{right:20%;}
+			.port2{width:600px;right:15%;}
 	
 	</style>
 
