--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
     <![endif]-->
 	
 	<style>.owl-wrapper{margin-left:auto; margin-right:auto;}
-			.port1{height:400px; margin-left:}
-			.port2{width:600px;right:15%;}
+			.port1{height:400px;}
 	
 	</style>
 
