--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 	
 	<style>.owl-wrapper{margin-left:auto; margin-right:auto;}
 
+	aside.cta-quote {padding:100px;}
 			
 			
 	
@@ -131,7 +132,83 @@
         </div>
     </header>
 
-    <section id="about">
+	<aside class="cta-quote" id="about" style="background-color:white;">
+            <div class="row text-center">
+                <div class="col-lg-12">
+                    <h1 style="color:black;">About Us</h1>
+                    <p></p>
+                    <hr class="colored">
+                </div>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-10 col-md-offset-1">
+							<span class="quote" style="color:black;">Our philosopy is to make the web a better place by using the best tools available.  We provide your business with the opportunity to present yourself on the web in the best ways possible.</span>
+                               <br><br> <a href="#work" class="btn btn-outline-dark">Learn More</a>
+						</div>
+					</div>	
+				</div>
+				
+			</div>
+		</aside>
+
+	<section class="bg-gray">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Our Team</h2>
+                    <p>We are a group of digital marketers with a passion for great art that serves a practical purpose.</p>
+                    <hr class="colored">
+                </div>
+            </div>
+            <div class="row content-row">
+                <div class="col-lg-12">
+                    <div class="about-carousel">
+
+                        <div class="item">
+                            <img src="assets/img/people/1.jpg" class="img-responsive" alt="">
+                            <div class="caption">
+                                <h3>Matt Sztubinski</h3>
+                                <hr class="colored">
+                                <p>Co-founder</p>
+                                <ul class="list-inline social">
+                                    <li>
+                                        <a href="#"><i class="fa fa-facebook fa-fw"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="fa fa-twitter fa-fw"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="assets/img/people/2.jpg" class="img-responsive" alt="">
+                            <div class="caption">
+                                <h3>Matt Stanczak</h3>
+                                <hr class="colored">
+                                <p>Co-founder</p>
+                                <ul class="list-inline social">
+                                    <li>
+                                        <a href="#"><i class="fa fa-facebook fa-fw"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="fa fa-twitter fa-fw"></i></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
+                                    </li>
+                                </ul>
+
+						</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+	
+    <section>
         <div class="container-fluid">
             <div class="row text-center">
                 <div class="col-lg-12">
@@ -173,62 +250,7 @@
         </div>
     </section>
 
-    <section class="bg-gray">
-        <div class="container text-center">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>Our Team</h2>
-                    <p>We are a group of digital marketers with a passion for great art that serves a practical purpose.</p>
-                    <hr class="colored">
-                </div>
-            </div>
-            <div class="row content-row">
-                <div class="col-lg-12">
-                    <div class="about-carousel">
-
-                        <div class="item">
-                            <img src="assets/img/people/1.jpg" class="img-responsive" alt="">
-                            <div class="caption">
-                                <h3>Patricia West</h3>
-                                <hr class="colored">
-                                <p>Marketing Director</p>
-                                <ul class="list-inline social">
-                                    <li>
-                                        <a href="#"><i class="fa fa-facebook fa-fw"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-twitter fa-fw"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <img src="assets/img/people/2.jpg" class="img-responsive" alt="">
-                            <div class="caption">
-                                <h3>Howard Scott</h3>
-                                <hr class="colored">
-                                <p>Sales Manager</p>
-                                <ul class="list-inline social">
-                                    <li>
-                                        <a href="#"><i class="fa fa-facebook fa-fw"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-twitter fa-fw"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
-                                    </li>
-                                </ul>
-
-						</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    
 
     <aside class="cta-quote" style="background-image: url('assets/img/bg-aside.jpg');">
         <div class="container">
