--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 col-md-offset-0">
-							<span class="quote" style="color:black;">Our philosopy is to make the web a better place by using the best tools available.  We provide your business with the opportunity to present yourself on the web in the best ways possible.</span>
-                               <br><br> <a href="#work" class="btn btn-outline-dark">Learn More</a>
+							<span class="quote" style="color:black;">Our philosopy is to make the web a better place by using the best tools available.  We provide your business with the opportunity to present itself on the web in the best ways possible.</span>
+                               <br><br> <a href="#work" class="btn btn-outline-dark">Learn More About Our Process</a>
 						</div>
 					</div>	
 				</div>
