--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
         </div>
     </section>
 
+<!--
     <section class="testimonials">
         <div class="container">
             <div class="row">
@@ -468,7 +469,17 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
+
+    <section class="testimonials">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1">
+                <a href="#" class="btn btn-outline-dark" style="width:90%">Contact Us!</a>
+                </div>
+            </div>    
+        </div>      
+    </section>            
 
  <!--   <section id="pricing" class="pricing" style="background-image: url('assets/img/bg-pricing.jpg')">
         <div class="container">
@@ -532,6 +543,7 @@
         </div>
     </section>
 -->
+    <!--
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -584,6 +596,7 @@
             </div>
         </div>
     </section>
+    -->
 
  <!--   <a href="#" class="btn btn-block btn-full-width">Buy Vitality Now!</a> -->
 
@@ -592,15 +605,15 @@
             <div class="row">
                 <div class="col-md-4 contact-details">
                     <h3><i class="fa fa-phone"></i> Call</h3>
-                    <p>555-213-4567</p>
+                    <p>777-777-7777</p>
                 </div>
                 <div class="col-md-4 contact-details">
                     <h3><i class="fa fa-map-marker"></i> Visit</h3>
-                    <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                    <p>Lafayette Hill, PA</p>
                 </div>
                 <div class="col-md-4 contact-details">
                     <h3><i class="fa fa-envelope"></i> Email</h3>
-                    <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                    <p><a href="mailto:feedback@startbootstrap.com">goodcandyinc@gmail.com</a>
                     </p>
                 </div>
             </div>
@@ -618,7 +631,7 @@
             </div>
             <div class="row copyright">
                 <div class="col-lg-12">
-                    <p class="small">&copy; 2014 Start Bootstrap Themes</p>
+                    <p class="small">&copy; 2014 Good Cand Inc</p>
                 </div>
             </div>
         </div>
@@ -813,7 +826,7 @@
             <a href="index.html"><small>Back to Preview Page</small></a>
         </div>
 -->		
-    </div>
+
     <!-- End Style Switcher -->
 
     <!-- Core Scripts -->
@@ -833,8 +846,6 @@
     <!-- Vitality Theme Scripts -->
     <script src="assets/js/vitality.js"></script>
 
-    <!-- Style Switcher Scripts - Demo Purposes Only! -->
-    <script src="assets/demo/style.switcher.js"></script>
 
 </body>
 
