--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <header style="background-image: url('assets/img/bg-header.jpg');">
         <div class="intro-content">
             <img src="assets/img/profile.png" class="img-responsive img-centered" alt="">
-            <div class="brand-name">Good Candy Inc.</div>
+            <!--<div class="brand-name">Good Candy Inc.</div>-->
             <hr class="colored">
             <div class="brand-name-subtext">Sweet. Simple. Solutions.</div>
         </div>
