--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 	<style>.owl-wrapper{margin-left:auto; margin-right:auto;}
 
 	aside.cta-quote {padding:100px;}
-	.crazy{margin-left:-8px;}		
+	.crazy{margin-left: auto;margin-right: auto}
+    .WhoWeAre{padding-left: 7px; padding-right: 7px;}
 			
 	
 	</style>
@@ -132,24 +133,24 @@
         </div>
     </header>
 
-	<aside class="cta-quote" id="about" style="background-color:white;">
+	<section class="cta-quote" id="about" style="background-color:white;">
             <div class="row text-center">
                 <div class="col-lg-12">
-                    <h1 style="color:black;">About Us</h1>
+                    <h1 style="color:black;">Who We Are</h1>
                     <p></p>
                     <hr class="colored">
                 </div>
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 col-md-offset-0">
-							<span class="quote" style="color:black;">Our philosopy is to make the web a better place by using the best tools available.  We provide your business with the opportunity to present itself on the web in the best ways possible.</span>
-                               <br><br> <a href="#work" class="btn btn-outline-dark crazy">Learn More About <br>Our Process</a>
+							<p class="WhoWeAre"><span style="color:black;">We're just a couple of guys who understand the internet and love a good cheesesteak. Turns out a good chessesteak's hard to find anymore because everyone who searches for one finds two dozen unsavory domino's/papa john knockoffs. The guys who make the real thing don't get represented anymore. We aim to fix that.</span></p>
+                               <br><br> <a href="#work" class="btn btn-outline-dark crazy ">Learn More About <br>Our Process</a>
 						</div>
 					</div>	
 				</div>
 				
 			</div>
-		</aside>
+		</section>
 
 	<section class="bg-gray">
         <div class="container text-center">
