--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link href="assets/css/plugins/owl-carousel/owl.transitions.css" rel="stylesheet" type="text/css">
     <link href="assets/css/plugins/magnific-popup.css" rel="stylesheet" type="text/css">
     <link href="assets/css/plugins/jquery.fs.wallpaper.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/plugins/animate.css" rel="stylesheet" type="text/css">	
 
     <!-- Vitality Theme CSS -->
     <!-- Uncomment the color scheme you want to use. -->
@@ -154,9 +155,9 @@
 
     
   <aside class="cta-quote" style="background-image: url('assets/img/bgaside2.png');">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-10 col-md-offset-1">
+                <div class="col-md-10 col-md-offset-1 wow fadeIn" data-wow-delay=".2s">
                     <span class="quote">We get you back in touch with your small town.</span>
                 </div>
             </div>
@@ -885,6 +886,8 @@
     <script src="assets/js/plugins/jquery.fs.wallpaper.js"></script>
     <script src="assets/js/contact_me.js"></script>
     <script src="assets/js/plugins/jqBootstrapValidation.js"></script>
+	<script src="assets/js/plugins/wow/wow.min.js"></script>
+	    <script src="assets/js/plugins/jquery.mixitup.js"></script>
 
     <!-- Vitality Theme Scripts -->
     <script src="assets/js/vitality.js"></script>
