--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <img src="assets/img/profile.png" class="img-responsive img-centered" alt="">
             <!--<div class="brand-name">Good Candy Inc.</div>-->
             <hr class="colored">
-            <div class="brand-name-subtext">Sweet. Simple. Solutions.</div>
+            <div class="brand-name-subtext wow fadeIn" data-wow-delay=".2s"	">Sweet. Simple. Solutions.</div>
         </div>
         <div class="scroll-down">
             <a class="btn" href="#about"><i class="fa fa-angle-down fa-fw"></i></a>
@@ -145,7 +145,7 @@
 					<div class="row">
 						<div class="col-md-12 col-md-offset-0">
 							<p class="WhoWeAre"><span style="color:black;">We're just a couple of guys who understand the internet and love a good cheesesteak. Turns out a good chessesteak's hard to find anymore because everyone who searches for one finds two dozen unsavory domino's/papa john knockoffs. The guys who make the real thing don't get represented anymore. We aim to fix that.</span></p>
-                               <br><br> <a href="#work" class="btn btn-outline-dark crazy ">Learn More<br>About Us</a>
+                               <br><br> <a href="#work" class="btn btn-outline-dark crazy  ">Learn More<br>About Us</a>
 						</div>
 					</div>	
 				</div>
@@ -187,7 +187,7 @@
   <aside class="cta-quote" style="background-image: url('assets/img/bgaside3.png');">
         <div class="container">
             <div class="row">
-                <div class="col-md-10 col-md-offset-1">
+                <div class="col-md-10 col-md-offset-1 wow fadeIn" data-wow-delay=".2s"">
                     <span class="quote" style="color:black;">We focus on sweet and simple solutions.</span>
                 </div>
             </div>
