--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 		</section>
 
   <aside class="cta-quote" style="background-image: url('assets/img/bgaside3.png');">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 wow fadeIn" data-wow-delay=".2s"">
                     <span class="quote" style="color:black;">We focus on sweet and simple solutions.</span>
