--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -141,7 +141,7 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-lg-12">
-				<img src="./assets/img/WebDesign.png" alt="">
+				<img src="./assets/img/WebDesign.png" alt="" style="max-width:100%;">
                     <h1 style="color:black;">Website Design</h1>
                     <p></p>
                     <hr class="colored">
