--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
     </header>
 
-	<section class="bg-gray">
+	<section class="bg-gray" id="about">
         <div class="container text-center">
             <div class="row">
                 <div class="col-lg-12">
