--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -178,8 +178,15 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 col-md-offset-0">
-							<span class="aboutustext" style="color:black;">We reintroduce your company to the internet. We say (re) because even if you've never explored e-marketing before if you make a good product the internet knows about you. That's a fact. People talk and the web is where they're talking. What we do is get you in touch with these people through a combination strategy of web design, social media management, and SEO expertise. Our process is comprehensive and efficient.</span>
-                               <br><br> <a href="#process" class="btn btn-outline-dark crazy">Learn More About<br>Our Process</a>
+							<span class="aboutustext" style="color:black;">
+							To say that the ways in which people search for information today are rapidly changing is an understatement. [Just as the newspaper was replaced by the desktop over recent years, the desktop is being replaced by mobile devices]
+							<br><br>Whenever and wherever your customers are when they are struck with the desire for your product or service is when and where they want to know about it.  A hungry man stuck in traffic isn't going to wait to get home to seek out his dinner options when he can actively start the search  right away from his phone.  This is a key growing trend that we pay very much attention to.
+							<br><br>All Good Candy designed websites function flawlessly and look great across the full range internet ready devices.  This way we ensure that no matter how your customers are viewing your website they all get the same sweet, simple look and professional experience.]
+							<br><br>
+                               <br><h4>Check out some of our favorite resources that describe Mobile Friendly Design</h4>
+							   <div id="resources"><a href="http://www.themobileplaybook.com/en-us/" class="btn btn-outline-dark crazy buttonformat" target="_blank" ><i class="fa fa-external-link"></i> The Mobile Playbook<br> -Google Inc.</a></div>
+							   <div id="resources"><a href="http://www.huffingtonpost.com/ian-mills/5-reasons-you-absolutely-_b_5122485.html" class="btn btn-outline-dark crazy buttonformat" target="_blank"><i class="fa fa-external-link"></i> 5 Reasons You Absolutely Must Optimize Your Website for Mobile<br> -The Huffington Post</a></div>
+							   <div id="resources"><a href="https://blog.kissmetrics.com/mobile-mania/?wide=1" class="btn btn-outline-dark crazy buttonformat" target="_blank"><i class="fa fa-external-link"></i> The Growing Importance of Mobile Website Optimization<br> -KISSmetrics</a></div>
 						</div>
 					</div>	
 				</div>
