--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -181,7 +181,7 @@
 							<span class="aboutustext" style="color:black;">
 							To say that the ways in which people search for information today are rapidly changing is an understatement. [Just as the newspaper was replaced by the desktop over recent years, the desktop is being replaced by mobile devices]
 							<br><br>Whenever and wherever your customers are when they are struck with the desire for your product or service is when and where they want to know about it.  A hungry man stuck in traffic isn't going to wait to get home to seek out his dinner options when he can actively start the search  right away from his phone.  This is a key growing trend that we pay very much attention to.
-							<br><br>All Good Candy designed websites function flawlessly and look great across the full range internet ready devices.  This way we ensure that no matter how your customers are viewing your website they all get the same sweet, simple look and professional experience.]
+							<br><br>All Good Candy designed websites function flawlessly and look great across the full range internet ready devices.  This way we ensure that no matter how your customers are viewing your website they all get the same sweet, simple look and professional experience.
 							<br><br>
                                <br><h4>Check out some of our favorite resources that describe Mobile Friendly Design</h4>
 							   <div id="resources"><a href="http://www.themobileplaybook.com/en-us/" class="btn btn-outline-dark crazy buttonformat" target="_blank" ><i class="fa fa-external-link"></i> The Mobile Playbook<br> -Google Inc.</a></div>
@@ -194,11 +194,11 @@
 			</div>
 		</section>   
 
-		 <aside class="cta-quote" style="background-image: url('assets/img/bgaside3.png');">
+		 <aside class="cta-quote" style="background-image: url('assets/img/bgaside7.png');">
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1 wow fadeIn" data-wow-delay=".2s">
-							<span class="quote" style="color:black;">We focus on sweet and simple solutions.</span>
+							<span class="quote" style="color:white;">We focus on sweet and simple solutions.</span>
 						</div>
 					</div>
 				</div>
@@ -234,11 +234,11 @@
 
 
 
-		 <aside class="cta-quote" style="background-image: url('assets/img/bgaside3.png');">
+		 <aside class="cta-quote" style="background-image: url('assets/img/bgaside6.png');">
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1 wow fadeIn" data-wow-delay=".2s">
-							<span class="quote" style="color:black;">Feel the clarity in every pixel...</span>
+							<span class="quote" style="color:white;">Feel the clarity in every pixel...</span>
 						</div>
 					</div>
 				</div>
@@ -265,11 +265,11 @@
 			</div>
 		</section>  		
 		
-		 <aside class="cta-quote" style="background-image: url('assets/img/bgaside3.png');">
+		 <aside class="cta-quote" style="background-image: url('assets/img/bgaside8.png');">
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1 wow fadeIn" data-wow-delay=".2s">
-							<span class="quote" style="color:black;">We focus on sweet and simple solutions.</span>
+							<span class="quote" style="color:white;">We focus on sweet and simple solutions.</span>
 						</div>
 					</div>
 				</div>
