--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -63,16 +63,29 @@
 	
 	<style>.owl-wrapper{margin-left:auto; margin-right:auto;}
 
-	aside.cta-quote {padding:100px;}
-	.crazy{margin-left:-8px; width:80%;}		
+	aside.cta-quote {
+		padding:100px;
+		}
+	.crazy{
+		margin-left:-8px; width:80%;
+		transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+		transition-delay: 0.2s;
+		box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+		}		
 
-    .aboutustext {font-size:23px;}
+    .aboutustext {
+		font-size:23px;
+		}
         
-	aside.cta-quote span.quote {font-size:30px;}
-    .test {font-size:40px;}   
-        .horse{margin-left:auto; margin-right:auto; width:90%;}
-        .seo{margin-top:-4px;}
-		.navbar{background-color:#222;}
+	aside.cta-quote span.quote {
+		font-size:30px;
+		}
+    .test {
+		font-size:40px;
+		}   
+.horse{margin-left:auto; margin-right:auto; width:90%;}
+.seo{margin-top:-4px;}
+.navbar{background-color:#222;}
 		
 		.navbar-fixed-top.navbar-expanded{padding:10px;}
 .dropdown-menu li > a:hover, .dropdown-menu li > a:focus, .dropdown-submenu:hover > a {background-color:#ef4035; color:red;}
