--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -224,31 +224,29 @@
 		<b class="quote-right wow fadeInDown delay-03"><i class="fa-quote-right"></i></b>
     	<div class="row">
         	<div class="col-lg-12">
-            	<p class="client-part-haead wow fadeInDown delay-05">It was a pleasure to work with the guys at Knight Studio. They made sure 
-we were well fed and drunk all the time!</p>
+            	<p class="client-part-haead wow fadeInDown delay-05">We needed a specific kind of sound to fit our wedding.  Flashbang found it.  These guys bring the fun.</p>
             </div>
         </div>
     	<ul class="client wow fadeIn delay-05s">
         	<li><a href="#">
-            	<img src="img/client-pic1.jpg" alt="">
-                <h3>James Bond</h3>
-                <span>License To Drink Inc.</span>
+            	<h3>Charles & Michelle Fitzpatrick</h3>
+                <span>Married 2014</span>
             </a></li>
         </ul>
     </div>
 </section><!--main-section client-part-end-->
 <div class="c-logo-part"><!--c-logo-part-start-->
 	<div class="container">
-    	<ul>
+    	<!--<ul>
         	<li><a href="#"><img src="img/c-liogo1.png" alt=""></a></li>
             <li><a href="#"><img src="img/c-liogo2.png" alt=""></a></li>
             <li><a href="#"><img src="img/c-liogo3.png" alt=""></a></li>
             <li><a href="#"><img src="img/c-liogo4.png" alt=""></a></li>
             <li><a href="#"><img src="img/c-liogo5.png" alt=""></a></li>
-    	</ul>
+    	</ul>-->
 	</div>
-</div><!--c-logo-part-end-->
-<section class="main-section team" id="team"><!--main-section team-start-->
+</div> <!--c-logo-part-end-->
+<!--<section class="main-section team" id="team">
 	<div class="container">
         <h2>team</h2>
         <h6>Take a closer look into our amazing team. We won’t bite.</h6>
@@ -267,7 +265,7 @@ we were well fed and drunk all the time!</p>
                 <h3 class="wow fadeInDown delay-03s">Walter White</h3>
                 <span class="wow fadeInDown delay-03s">Chief Executive Officer</span>
                 <p class="wow fadeInDown delay-03s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
-            </div>
+            </div> -->
           <!--  <div class="team-leader-box">
                 <div class="team-leader  wow fadeInDown delay-06s"> 
                     <div class="team-leader-shadow"><a href="#"></a></div>
@@ -283,7 +281,7 @@ we were well fed and drunk all the time!</p>
                 <span class="wow fadeInDown delay-06s">Product Manager</span>
                 <p class="wow fadeInDown delay-06s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
             </div>-->
-            <div class="team-leader-box">
+          <!--  <div class="team-leader-box">
                 <div class="team-leader wow fadeInDown delay-09s"> 
                     <div class="team-leader-shadow"><a href="#"></a></div>
                     <img src="img/team-leader-pic3.jpg" alt="">
@@ -304,12 +302,12 @@ we were well fed and drunk all the time!</p>
 
 
 
-<section class="business-talking"><!--business-talking-start-->
+<!--<section class="business-talking">
 	<div class="container">
         <h2>Let’s Talk Business.</h2>
     </div>
-</section><!--business-talking-end-->
-<div class="container">
+</section> --><!--business-talking-end-->
+<!-- <div class="container">
 <section class="main-section contact" id="contact">
 	
         <div class="row">
@@ -348,10 +346,10 @@ we were well fed and drunk all the time!</p>
             </div>
         </div>
 </section>
-</div>
+</div> -->
 <footer class="footer">
     <div class="container">
-        <div class="footer-logo"><a href="#"><img src="img/footer-logo.png" alt=""></a></div>
+        <div class="footer-logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
         <span class="copyright">Copyright © 2014 Knight Theme By <a href="#">W3Goods</a>.</span>
     </div>
 </footer>
