--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -92,7 +92,7 @@
     	<figure class="logo animated fadeInDown delay-07s">
         	<a href="#"><img src="img/logo.png" alt=""></a>	
         </figure>	
-        <h1 class="animated fadeInDown delay-07s">Flash Bang Entertainment</h1>
+        <h1 class="animated fadeInDown delay-07s">Flashbang Entertainment</h1>
         <ul class="we-create animated fadeInUp delay-1s">
         	<li>We provide top quality live entertainment while offering you a range of options to fit your specific requests and budget. </li>
         </ul>
@@ -350,7 +350,7 @@
 <footer class="footer">
     <div class="container">
         <div class="footer-logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
-        <span class="copyright">Copyright © 2014 Knight Theme By <a href="#">W3Goods</a>.</span>
+        <span class="copyright">Copyright © 2014 Flashbang Entertainment By <a href="#">The Good Candy</a>.</span>
     </div>
 </footer>
 
