--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -160,7 +160,7 @@
         <div class="row">
             <div class="col-md-4 col-md-offset-1"><h2>Rob McCabe</h2><h4 style="text-align:center">Founder & Musician</h4><div class="total"><img src="img/1.jpg" alt="" class="team"></div></div>
             <div class="col-md-1"><div class="breakerbreaker"></div></div>
-            <div class="col-md-4 col-md-offset-1"><h2>Tim Treweek</h2><h4 style="text-align:center">Partner and Musical Director</h4><img src="img/2.jpg" alt="" class="team"></div>
+            <div class="col-md-4 col-md-offset-1"><h2>Tim Treweek</h2><h4 style="text-align:center">Founder & Musical Director</h4><img src="img/2.jpg" alt="" class="team"></div>
         </div>
 
         
