--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -171,15 +171,19 @@
 
 <section class="main-section paddind" id="Portfolio"><!--main-section-start-->
 	<div class="container">
-    	<h2>Portfolio</h2>
-    	<h6>Fresh portfolio of designs that will keep you wanting more.</h6>
+    	<h2>Bands</h2>
+    	<h6>Please, click on the links below to view more photos and hear audio samples.<br>
+			Pricing and availability may vary.  Contact us for more information.
+</h6>
       <div class="portfolioFilter">  
         <ul class="Portfolio-nav wow fadeIn delay-02s">
         	<li><a href="#" data-filter="*" class="current" >All</a></li>
-            <li><a href="#" data-filter=".branding" >Branding</a></li>
-            <li><a href="#" data-filter=".webdesign" >Web design</a></li>
-            <li><a href="#" data-filter=".printdesign" >Print design</a></li>
-            <li><a href="#" data-filter=".photography" >Photography</a></li>
+            <li><a href="#" data-filter=".branding" >Tim TreWeek Acoustic</a></li>
+            <li><a href="#" data-filter=".webdesign" >Tim N' Rob</a></li>
+            <li><a href="#" data-filter=".printdesign" >The Boomstick Trio</a></li>
+            <li><a href="#" data-filter=".photography" >Boomstick</a></li>
+			<li><a href="#" data-filter=".photography" >Skinny Mamie</a></li>
+			<li><a href="#" data-filter=".printdesign" >Hollow Point</a></li>
         </ul>
        </div> 
         
