--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -17,6 +17,9 @@
 <link href="css/responsive.css" rel="stylesheet" type="text/css">
 <link href="css/animate.css" rel="stylesheet" type="text/css">
 
+    <!-- Font Awesome -->
+    <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
 <!--[if IE]><style type="text/css">.pie {behavior:url(PIE.htc);}</style><![endif]-->
 
 <script type="text/javascript" src="js/jquery.1.8.3.min.js"></script>
@@ -87,21 +90,6 @@
 </head>
 <body>
 <div style="overflow:hidden;">
-<header class="header" id="header"><!--header-start-->
-	<div class="container">
-    	<figure class="logo animated fadeInDown delay-07s">
-        	<a href="#"><img src="img/logo.png" alt=""></a>	
-        </figure>	
-        <h1 class="animated fadeInDown delay-07s">Flashbang Entertainment</h1>
-        <ul class="we-create animated fadeInUp delay-1s">
-        	<li>We provide top quality live entertainment while offering you a range of options to fit your specific requests and budget. </li>
-        </ul>
-            <a class="link animated fadeInUp delay-1s" href="#service">Get Started</a>
-    </div>
-</div>
-</header><!--header-end-->
-
-
 <nav class="main-nav-outer" id="test"><!--main-nav-start-->
 	<div class="container">
         <ul class="main-nav">
@@ -116,6 +104,20 @@
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
     </div>
 </nav><!--main-nav-end-->
+
+<header class="header" id="header"><!--header-start-->
+	<div class="container">
+    	<figure class="logo animated fadeInDown delay-07s">	
+        </figure>	
+        <h1 class="animated fadeInDown delay-07s">Flashbang Entertainment</h1>
+        <ul class="we-create animated fadeInUp delay-1s">
+        	<li>We provide top quality live entertainment while offering you a range of options to fit your specific requests and budget. </li>
+        </ul>
+            <a class="link animated fadeInUp delay-1s" href="#service"><i class="fa fa-play"></i></a>
+    </div>
+</div>
+</header><!--header-end-->
+
 
 <!-- Our Mission Section -->
 
@@ -178,12 +180,9 @@
       <div class="portfolioFilter">  
         <ul class="Portfolio-nav wow fadeIn delay-02s">
         	<li><a href="#" data-filter="*" class="current" >All</a></li>
-            <li><a href="#" data-filter=".branding" >Tim TreWeek Acoustic</a></li>
-            <li><a href="#" data-filter=".webdesign" >Tim N' Rob</a></li>
-            <li><a href="#" data-filter=".printdesign" >The Boomstick Trio</a></li>
-            <li><a href="#" data-filter=".photography" >Boomstick</a></li>
-			<li><a href="#" data-filter=".photography" >Skinny Mamie</a></li>
-			<li><a href="#" data-filter=".printdesign" >Hollow Point</a></li>
+            <li><a href="#" data-filter=".branding" >Solo & Duo</a></li>
+            <li><a href="#" data-filter=".webdesign" >Party Bands</a></li>
+            <li><a href="#" data-filter=".printdesign" >Blues and Rock</a></li>
         </ul>
        </div> 
         
