--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -218,8 +218,8 @@ a:active {
                 </div>
                 <div class=" Portfolio-box branding">
                 	<a href="#"><img src="img/Portfolio-pic3.jpg" alt=""></a>	
-                	<h3>Uni Sans</h3>
-                    <p>Branding</p>
+                	<h3>Tim Treweek Acoustic</h3>
+                    <p>...</p>
                 </div>
                 <div class=" Portfolio-box photography" >
                 	<a href="#"><img src="img/Portfolio-pic4.jpg" alt=""></a>	
@@ -228,8 +228,8 @@ a:active {
                 </div>
                 <div class=" Portfolio-box branding">
                 	<a href="#"><img src="img/Portfolio-pic5.jpg" alt=""></a>	
-                	<h3>Hipster</h3>
-                    <p>Branding</p>
+                	<h3>Tim N' Rob</h3>
+                    <p>...</p>
                 </div>
                 <div class=" Portfolio-box photography">
                 	<a href="#"><img src="img/Portfolio-pic6.jpg" alt=""></a>	
