--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -101,6 +101,8 @@ a:hover {
 a:active {
     text-decoration: none;
 }
+
+.desc{line-height:20px;}
  
     </style>
     
@@ -206,36 +208,42 @@ a:active {
         
 	</div>
     <div class="portfolioContainer wow fadeInUp delay-04s">
-            	<div class=" Portfolio-box printdesign">
+            	<div class=" Portfolio-box webdesign">
                 	<a href="#"><img src="img/Portfolio-pic1.jpg" alt=""></a>	
-                	<h3>Foto Album</h3>
-                    <p>Print Design</p>
+                	<h3>Hollow Point</h3>
+                    <p class="desc">Electric Guitar, Sax, Flute, Electric Bass, Drums, Keyboards, Male & Female Vocals</p>
                 </div>
                 <div class="Portfolio-box webdesign">
                 	<a href="#"><img src="img/Portfolio-pic2.jpg" alt=""></a>	
-                	<h3>Luca Theme</h3>
-                    <p>Web Design</p>
+                	<h3>The Boomstick Trio</h3>
+                    <p class="desc">Acoustic/Classical Guitar, Upright Bass/Violin/Acoustic Bass, Sax/Flute/Cajon, Male Vocals</p>
                 </div>
                 <div class=" Portfolio-box branding">
                 	<a href="#"><img src="img/Portfolio-pic3.jpg" alt=""></a>	
-                	<h3>Tim Treweek Acoustic</h3>
-                    <p>...</p>
+                	<h3>Tim Treweek Acoustic Entertainment</h3>
+                    <p class="desc">Acoustic Guitar & Male Vocals</p>
                 </div>
-                <div class=" Portfolio-box photography" >
+ <!--               <div class=" Portfolio-box photography" >
                 	<a href="#"><img src="img/Portfolio-pic4.jpg" alt=""></a>	
                 	<h3>Vinyl Record</h3>
-                    <p>Photography</p>
+                    <p class="desc">Photography</p>
                 </div>
+-->				
                 <div class=" Portfolio-box branding">
                 	<a href="#"><img src="img/Portfolio-pic5.jpg" alt=""></a>	
                 	<h3>Tim N' Rob</h3>
-                    <p>...</p>
+                    <p>Acoustic Guitar, Sax, Flute, Cajon, Male Vocals</p>
                 </div>
-                <div class=" Portfolio-box photography">
+                <div class=" Portfolio-box webdesign">
                 	<a href="#"><img src="img/Portfolio-pic6.jpg" alt=""></a>	
-                	<h3>Windmills</h3>
-                    <p>Photography</p>
+                	<h3>Boomstick</h3>
+                    <p class="desc">Electric Guitar, Acoustic Guitar, Sax, Flute, Electic Bass, Full Drum Kit, Male Vocals</p>
                 </div>
+                <div class=" Portfolio-box printdesign">
+                	<a href="#"><img src="img/Portfolio-pic8.jpg" alt=""></a>	
+                	<h3>Skinny Mamie</h3>
+                    <p class="desc">Electic Guitar, Sax, Flute, Hammond, Organ, Keyboards, Electric Bass, Full Drum Kit.</p>
+                </div>				
     </div>
 </section><!--main-section-end-->
 
