--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -117,8 +117,8 @@ a:active {
             <li><a href="#service">Mission</a></li>
             <li><a href="#Portfolio">About Us</a></li>
             <li class="small-logo"><a href="#header"><img src="img/small-logo.png" alt=""></a></li>
-            <li><a href="#client">Services</a></li>
-            <li><a href="#team">Bands</a></li>
+            <li><a href="#bands">Bands</a></li>
+            <li><a href="#reviews">Reviews</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
@@ -191,7 +191,7 @@ a:active {
 
 
 
-<section class="main-section paddind" id="Portfolio"><!--main-section-start-->
+<section class="main-section paddind" id="bands"><!--main-section-start-->
 	<div class="container">
     	<h2>Bands</h2>
     	<h6>Please, click on the links below to view more photos and hear audio samples.<br>
@@ -248,7 +248,7 @@ a:active {
 </section><!--main-section-end-->
 
 
-<section class="main-section client-part" id="client"><!--main-section client-part-start-->
+<section class="main-section client-part" id="reviews"><!--main-section client-part-start-->
 	<div class="container">
 		<b class="quote-right wow fadeInDown delay-03"><i class="fa-quote-right"></i></b>
     	<div class="row">
