--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -253,7 +253,7 @@ a:active {
 		<b class="quote-right wow fadeInDown delay-03"><i class="fa-quote-right"></i></b>
     	<div class="row">
         	<div class="col-lg-12">
-            	<p class="client-part-haead wow fadeInDown delay-05">We needed a specific kind of sound to fit our wedding.  Flashbang found it.  These guys bring the fun.</p>
+            	<p class="client-part-haead wow fadeInDown delay-05">We needed a specific kind of sound to fit our wedding. Flashbang found it.<br>	 These guys bring the fun.</p>
             </div>
         </div>
     	<ul class="client wow fadeIn delay-05s">
