--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -38,8 +38,15 @@
 <![endif]-->
 
 <style>
-    
-   .about {
+
+@media (max-width: 1300px) {
+    .main-nav li a {
+      margin:17px 5px;
+    }
+	}	
+	
+
+	.about {
        text-decoration-line: 1.5; text-align: left;
    }
     
