--- a/index.html
+++ b/index.html
@@ -299,15 +299,15 @@
 -->
     
 
-    <aside class="cta-quote" id="quoterepeat" style="background-image: url('assets/img/bgaside4.png');">
-        <div class="container">
+<aside class="cta-quote" style="background-image: url('assets/img/bgaside4.png');">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-10 col-md-offset-1">
-                    <span class="quote" style="color:white">We take full responsibility for all of your business internet activities.</span>
+                <div class="col-md-10 col-md-offset-1 wow fadeIn" data-wow-delay=".2s">
+                    <span class="quote" style="color:black;">We take full responsibility for all of your business internet activities.</span>
                 </div>
             </div>
         </div>
-    </aside>
+    </aside> 
 
     <section id="process" class="services">
         <div class="container">
