--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 wow fadeIn" data-wow-delay=".2s">
-                    <span class="quote" style="color:black;">We take full responsibility for all of your business internet activities.</span>
+                    <span class="quote" style="color:white;">We take full responsibility for all of your business internet activities.</span>
                 </div>
             </div>
         </div>
