--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -208,6 +208,7 @@ a:active {
         <ul class="Portfolio-nav wow fadeIn delay-02s">
         	<li><a href="#" data-filter="*" class="current" >All</a></li>
             <li><a href="#" data-filter=".branding" >Solo & Duo</a></li>
+             <li><a href="#" data-filter=".triobands" >Trio Bands</a></li>
             <li><a href="#" data-filter=".webdesign" >Party Bands</a></li>
             <li><a href="#" data-filter=".printdesign" >Blues and Rock</a></li>
         </ul>
@@ -220,7 +221,7 @@ a:active {
                 	<h3>Hollow Point</h3>
                     <p class="desc">Electric Guitar, Sax, Flute, Electric Bass, Drums, Keyboards, Male & Female Vocals</p>
                 </div>
-                <div class="Portfolio-box webdesign">
+                <div class="Portfolio-box triobands">
                 	<a href="#"><img src="img/Portfolio-pic2.jpg" alt=""></a>	
                 	<h3>The Boomstick Trio</h3>
                     <p class="desc">Acoustic/Classical Guitar, Upright Bass/Violin/Acoustic Bass, Sax/Flute/Cajon, Male Vocals</p>
