+Changed the class tags in flashbang portfolio

--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -207,16 +207,16 @@ a:active {
       <div class="portfolioFilter">  
         <ul class="Portfolio-nav wow fadeIn delay-02s">
         	<li><a href="#" data-filter="*" class="current" >All</a></li>
-            <li><a href="#" data-filter=".branding" >Solo & Duo</a></li>
+            <li><a href="#" data-filter=".soloandduo" >Solo & Duo</a></li>
              <li><a href="#" data-filter=".triobands" >Trio Bands</a></li>
-            <li><a href="#" data-filter=".webdesign" >Party Bands</a></li>
-            <li><a href="#" data-filter=".printdesign" >Blues and Rock</a></li>
+            <li><a href="#" data-filter=".partybands" >Party Bands</a></li>
+            <li><a href="#" data-filter=".bluesandrock" >Blues and Rock</a></li>
         </ul>
        </div> 
         
 	</div>
     <div class="portfolioContainer wow fadeInUp delay-04s">
-            	<div class=" Portfolio-box webdesign">
+            	<div class=" Portfolio-box partybands">
                 	<a href="#"><img src="img/Portfolio-pic1.jpg" alt=""></a>	
                 	<h3>Hollow Point</h3>
                     <p class="desc">Electric Guitar, Sax, Flute, Electric Bass, Drums, Keyboards, Male & Female Vocals</p>
@@ -226,7 +226,7 @@ a:active {
                 	<h3>The Boomstick Trio</h3>
                     <p class="desc">Acoustic/Classical Guitar, Upright Bass/Violin/Acoustic Bass, Sax/Flute/Cajon, Male Vocals</p>
                 </div>
-                <div class=" Portfolio-box branding">
+                <div class=" Portfolio-box soloandduo">
                 	<a href="#"><img src="img/Portfolio-pic3.jpg" alt=""></a>	
                 	<h3>Tim Treweek Acoustic Entertainment</h3>
                     <p class="desc">Acoustic Guitar & Male Vocals</p>
@@ -237,17 +237,17 @@ a:active {
                     <p class="desc">Photography</p>
                 </div>
 -->				
-                <div class=" Portfolio-box branding">
+                <div class=" Portfolio-box soloandduo">
                 	<a href="#"><img src="img/Portfolio-pic5.jpg" alt=""></a>	
                 	<h3>Tim N' Rob</h3>
                     <p>Acoustic Guitar, Sax, Flute, Cajon, Male Vocals</p>
                 </div>
-                <div class=" Portfolio-box webdesign">
+                <div class=" Portfolio-box partybands">
                 	<a href="#"><img src="img/Portfolio-pic6.jpg" alt=""></a>	
                 	<h3>Boomstick</h3>
                     <p class="desc">Electric Guitar, Acoustic Guitar, Sax, Flute, Electic Bass, Full Drum Kit, Male Vocals</p>
                 </div>
-                <div class=" Portfolio-box printdesign">
+                <div class=" Portfolio-box bluesandrock">
                 	<a href="#"><img src="img/Portfolio-pic8.jpg" alt=""></a>	
                 	<h3>Skinny Mamie</h3>
                     <p class="desc">Electic Guitar, Sax, Flute, Hammond, Organ, Keyboards, Electric Bass, Full Drum Kit.</p>
