--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -272,8 +272,13 @@ a:active {
         </ul>
     </div>
 </section><!--main-section client-part-end-->
-<div class="c-logo-part"><!--c-logo-part-start-->
-	<div class="container">
+
+
+
+
+
+<!--c-logo-part-start-->
+
     	<!--<ul>
         	<li><a href="#"><img src="img/c-liogo1.png" alt=""></a></li>
             <li><a href="#"><img src="img/c-liogo2.png" alt=""></a></li>
@@ -281,8 +286,17 @@ a:active {
             <li><a href="#"><img src="img/c-liogo4.png" alt=""></a></li>
             <li><a href="#"><img src="img/c-liogo5.png" alt=""></a></li>
     	</ul>-->
+
+<section class=""><!--main-section client-part-start-->
+	<div class="container"><br>
+	<a class="link animated fadeInUp delay-1s" id="aboutbutton" href="#">Contact Us!</a>	
+	<br>
 	</div>
-</div> <!--c-logo-part-end-->
+</section>	
+
+
+
+<!--c-logo-part-end-->
 <!--<section class="main-section team" id="team">
 	<div class="container">
         <h2>team</h2>
