--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -160,7 +160,7 @@ a:active {
                 Check out our bands page for more information and audio samples!
 
                 </p>
-            <br><br><a class="link animated fadeInUp delay-1s" id="aboutbutton" href="#service">Bands Page</a>
+            <br><br><a class="link animated fadeInUp delay-1s" id="aboutbutton" href="#bands">Check Out Our Bands!</a>
             </div>
             <div class="col-md-6  text-right wow fadeInUp delay-02s">
             	<img src="img/music.jpg" alt="">
@@ -287,7 +287,7 @@ a:active {
             <li><a href="#"><img src="img/c-liogo5.png" alt=""></a></li>
     	</ul>-->
 
-<section class=""><!--main-section client-part-start-->
+<section class="" id="contact"><!--main-section client-part-start-->
 	<div class="container"><br>
 	<a class="link animated fadeInUp delay-1s" id="aboutbutton" href="#">Contact Us!</a>	
 	<br>
