--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -277,7 +277,7 @@ a:active {
 
 <section class="" id="contact"><!--main-section client-part-start-->
 	<div class="container"><br>
-	<a class="link animated fadeInUp delay-1s" id="aboutbutton smooth" href="#">Contact Us!</a>	
+	<a class="link animated fadeInUp delay-1s" id="aboutbutton smooth" href="#" style="width:100%; margin-left:auto;margin-right:auto;text-align:center">Contact Us!</a>	
 	<br>
 	</div>
 </section>	
