--- a/index.html
+++ b/index.html
@@ -61,17 +61,16 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 	
-	<style>.owl-wrapper{margin-left:auto; margin-right:auto;}
-
+	<style>
+	.owl-wrapper{margin-left:auto; margin-right:auto;}
 	aside.cta-quote {padding:100px;}
 	.crazy{margin-left:-8px;}		
-
-    .aboutustext {font-size:23px;}
-        
+    .aboutustext {font-size:23px;}   
 	aside.cta-quote span.quote {font-size:30px;}
     .test {font-size:40px;}   
-        .horse{margin-left:auto; margin-right:auto; width:90%;}
-        .seo{margin-top:-4px;}
+    .horse{margin-left:auto; margin-right:auto; width:90%;}
+    .seo{margin-top:-4px;}
+    header .brand-name{font-size:40px;}
 	</style>
 
 </head>
