--- a/index.html
+++ b/index.html
@@ -387,7 +387,9 @@
                 <div class="row">
                     <div class="col-md-4 col-md-push-8">
                         <div class="project-details">
+<!--
                             <img src="assets/img/client-logos/logo-1.png" class="img-responsive client-logo" alt="">
+ -->
                             <span class="project-name">Vino's Pizza</span>
                             <span class="project-description">Redesign of pizza shop website in Lafayette Hill, PA</span>
                             <hr class="colored">
@@ -699,21 +701,32 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
+<!--                        
                             <img src="assets/img/client-logos/logo-1.png" class="img-responsive img-centered" alt="">
-                            <h2>Project Title</h2>
+-->                            
+                            <h2>Vino's Pizza</h2>
                             <hr class="colored">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos modi in tenetur vero voluptatum sapiente dolores eligendi nemo iste ea. Omnis, odio enim sint quam dolorum dolorem. Nostrum, minus, ad.</p>
+                            <p>We did a full makeover of Vino's Pizza online web presence.  Vino's Pizza is located in Lafayette Hill, PA just outside of Philadelphia and make some of the best pizzas you will ever have.  The problem was, the online customer was having a hard time finding out about that.  We went on a journey to fix this.
+                            <br><br>
+                            We started off by doing a full redesign of their "website" from the ground up.  We concentrated on the fact that most people search for restaurant menus and directions from their cell phone, which is why our first priority was the optimal functionality on mobile devices.
+                            <br><br>
+                            Next, we optimized their listings in websites like Yelp, Google+, Facebook, Menupages... so that the customer sees the most up to date information as well as some gorgeous pictures of thier pies.
+                            <br><br>
+                            Finally, we took their brand to social media and began activly engaging with the customer.  Be it proving information about events, specials, or just responding to reviews and questions. This allowed for greatly improved SEO on the major search engines.
+                            <br><br> 
+                            Vino's Pizza now has the online presence equilivent of the big chains, but with more agility and at a fraction of the cost. Also, make sure if you are around Philadelphia, ask Fabio and Pasquale to make you their famous "Grandmas Pizza".  We promise you will leave happy...
+                            </p>
                         </div>
                         <div class="col-lg-12">
                             <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive img-centered" alt="">
                         </div>
                         <div class="col-lg-8 col-lg-offset-2">
                             <ul class="list-inline item-details">
-                                <li>Client: <strong><a href="http://startbootstrap.com">Start Bootstrap</a></strong>
+                                <li>Client: <strong><a href="http://vinospizzeria.com">Vino's Pizza</a></strong>
                                 </li>
-                                <li>Date: <strong><a href="http://startbootstrap.com">April 2014</a></strong>
+                                <li>Date: <strong><a href="http://vinospizzeria.com"> 2014</a></strong>
                                 </li>
-                                <li>Service: <strong><a href="http://startbootstrap.com">Web Development</a></strong>
+                                <li>Service: <strong><a href="http://vinospizzeria.com">Full Service Package</a></strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
