--- a/index.html
+++ b/index.html
@@ -755,16 +755,16 @@
 <!--                        
                             <img src="assets/img/client-logos/logo-2.png" class="img-responsive img-centered" alt="">
 -->
-                            <h2>Flashbang Productions</h2>
+                            <h2>Flashbang Entertainment</h2>
                             <hr class="colored">
                             <p>
-                            Finding a good band to work at your event is hard business. Finding a quality gig for your band is also difficult... This did not make much sense to Flashbang Productions, a bright new startup servicing the Philadelphia Area. Flashbang Productions approached us and explained their frustrations with this issue and their ideas on how they could fix it.  They were also passionate about getting their message out to new business' and bands in the best way possible.  The was the kind of project we born to sink our teeth into...
+                            Finding a good band to work at your event is hard business. Finding a quality gig for your band is also difficult... This did not make much sense to Flashbang Entertainment, a bright new startup servicing the Philadelphia Area. Flashbang Entertainment approached us and explained their frustrations with this issue and their ideas on how they could fix it.  They were also passionate about getting their message out to new business' and bands in the best way possible.  The was the kind of project we born to sink our teeth into...
                             <br><br>
                             We started by breaking down the toughest issue: how can Flashbang attract both business owners and bands (two very different kinds of people)? Turns out both potential clientel actually do have a common goal; providing top notch entertainment night in and night out. So we set out on a mission to create the maximum amount of online exposure for Flashbang as possible. The kind of explosure that allowed for a win for businesses looking for that next great band, a win for local musicians looking for that next great gig, and especially a win for Flashbang Enteratinment acting as a liason between the two parties.  It was one of those classic "win" "win" "win" situations. 
                             <br><br>
                             After the website was launched is when Good Candy Inc went into overdrive.  We optimized their site to be SEO friendly, created local listings to control their online brand, and hit the social media universe to interact with what was most important, the customer. We also replaced their old, outdated media (pictures, videos, song recordings) with High Definition material to keep the customer happy and hungry for more.
                             <br><br>
-                            Flashbang Entertainment provides some of the best up and coming artists available in the Philadelphia area, and with the help of Good Cany Inc, now also has the exposure to back it up. So click some of the links below and check out some of their groovy tunes (also their website!). We hope you get lost in the smooth sax of "The Boomstick Tro" just like we did.
+                            Flashbang Entertainment provides some of the best up and coming artists available in the Philadelphia area, and with the help of Good Candy Inc, now also has the exposure to back it up. So click some of the links below and check out some of their groovy tunes (also their website!). We hope you get lost in the smooth sax of "The Boomstick Trio" just like we did.
                             </p>
                         </div>
                         <div class="col-lg-12">
