--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
     <!-- <link href="assets/css/vitality-tan.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="assets/css/vitality-turquoise.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="assets/css/vitality-yellow.css" rel="stylesheet" type="text/css"> -->
+	
+	<!-- Quick Scroll To Top -->
+	<link rel="stylesheet" href="assets/css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="assets/css/style.css"> <!-- Gem style -->
+	<script src="assets/js/modernizr.js"></script> <!-- Modernizr -->	
+	
 
     <!-- Style Switcher CSS - Demo Purposes Only! -->
     <link id="changeable-colors" rel="stylesheet" href="assets/css/vitality-red.css">
@@ -350,7 +356,7 @@
                             </ul>
                         </div>
                     </div>
-                    <br><a href="SocialMedia.html" class="btn btn-outline-dark crazy horse seo">Learn More</a> <br><br><br>                    
+                    <br><br><a href="SocialMedia.html" class="btn btn-outline-dark crazy horse">Learn More</a> <br><br><br>                    
                 </div>
                 <div class="col-md-4">
                     <div class="media">
@@ -651,6 +657,8 @@
 
  <!--   <a href="#" class="btn btn-block btn-full-width">Buy Vitality Now!</a> -->
 
+ 	<a href="#page-top" class="cd-top">Top</a>
+ 
     <footer class="footer" style="background-image: url('assets/img/bg-footer.jpg')">
         <div class="container text-center">
             <div class="row">
@@ -872,6 +880,7 @@
         </div>
     </div>
 
+	
     <!-- Style Switcher - FOR DEMO PURPOSES ONLY -->
  <!--   <div id="style-switcher" class="close-style-switcher">
  
@@ -923,6 +932,7 @@
     <script src="assets/js/plugins/jquery.fs.wallpaper.js"></script>
     <script src="assets/js/contact_me.js"></script>
     <script src="assets/js/plugins/jqBootstrapValidation.js"></script>
+	<script src="assets/js/main.js"></script> <!-- Gem jQuery --> <!-- Quick Scroll to Top -->
 
     <!-- Vitality Theme Scripts -->
     <script src="assets/js/vitality.js"></script>
